test/parser/error/err_20_call_arg_mismatch.pl0
program p; 
procedure f(x); begin end; 
begin 
call f() 
end